updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am hoping to become a software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to listen to music, play with my dog, and play video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A software developer for Amazon</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Seattle</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to work on new technologies that could help change the way the world works.</p>
     </section>
 
     <footer id="footer">
